--- a/Referral/view/frontend/templates/referral/index.phtml
+++ b/Referral/view/frontend/templates/referral/index.phtml
@@ -6,12 +6,73 @@ $referralCollection = $block->getReferralCollection();
 <div class="relative overflow-x-auto">
     <div class="flex flex-col md:flex-row items-center justify-between space-y-3 md:space-y-0 md:space-x-4 py-4">
         <div class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
-            <a href="#" type="button" class="flex items-center justify-center text-white bg-cyan-500 hover:bg-cyan-600 focus:ring-4 focus:ring-primary-300 font-medium
-                                         rounded-lg text-lg px-4 py-2 focus:outline-none dark:focus:ring-primary-800 border-0 !no-underline">
+            <a href="#"
+               id="btn-add-referral"
+               class="flex items-center justify-center !text-white bg-cyan-500 hover:bg-cyan-600 focus:ring-4 focus:ring-primary-300 font-medium
+                                         rounded-lg text-lg px-4 py-2 focus:outline-none dark:focus:ring-primary-800 border-0 !no-underline
+                      active:text-white">
                 Add referral
             </a>
         </div>
     </div>
+
+    <form id="form-referral"
+          class="bg-white dark:bg-gray-800 dark:text-blue-400 p-8 mb-8"
+          data-mage-init='{"validation": {}}'>
+        <input type="hidden" name="_token" value="mDOzpO1b7NfiUo48spN3ykOULLhynH0Hw9RoUw3h" autocomplete="off">
+        <div class="mb-4">
+            <label class="block font-medium text-xl text-gray-700 dark:text-gray-300 !m-0" for="name"> First Name </label>
+            <input class="!border-gray-300 dark:!border-gray-700 dark:!bg-gray-900 dark:text-gray-300 focus:border-indigo-500
+                          dark:focus:border-indigo-600 focus:ring-indigo-500 dark:focus:ring-indigo-600
+                          rounded-md shadow-sm border-gray-300 dark:border-gray-700 dark:!bg-gray-900 dark:text-gray-300
+                          focus:border-indigo-500 dark:focus:border-indigo-600 focus:ring-indigo-500
+                          dark:focus:ring-indigo-600 rounded-md shadow-sm block mt-1 w-full p-1.5 !mb-0" id="first-name"
+                   type="text" name="first-name"  required="required" autofocus="autofocus" autocomplete="first-name"
+                   data-validate='{"required":true}'>
+        </div>
+
+        <div class="mb-4">
+            <label class="block font-medium text-xl text-gray-700 dark:text-gray-300 !m-0" for="name"> Last Name </label>
+            <input class="!border-gray-300 dark:!border-gray-700 dark:!bg-gray-900 dark:text-gray-300 focus:border-indigo-500
+                          dark:focus:border-indigo-600 focus:ring-indigo-500 dark:focus:ring-indigo-600
+                          rounded-md shadow-sm border-gray-300 dark:border-gray-700 dark:!bg-gray-900 dark:text-gray-300
+                          focus:border-indigo-500 dark:focus:border-indigo-600 focus:ring-indigo-500
+                          dark:focus:ring-indigo-600 rounded-md shadow-sm block mt-1 w-full p-1.5 !mb-0"
+                   id="last-name" type="text" name="last-name"  required="required" autofocus="autofocus" autocomplete="last-name"
+                   data-validate='{"required":true}'>
+        </div>
+
+        <div class="mb-4">
+            <label class="block font-medium text-xl text-gray-700 dark:text-gray-300 !m-0" for="name"> Email </label>
+            <input class="!border-gray-300 dark:!border-gray-700 dark:!bg-gray-900 dark:text-gray-300 focus:border-indigo-500
+                          dark:focus:border-indigo-600 focus:ring-indigo-500 dark:focus:ring-indigo-600
+                          rounded-md shadow-sm border-gray-300 dark:border-gray-700 dark:!bg-gray-900 dark:text-gray-300
+                          focus:border-indigo-500 dark:focus:border-indigo-600 focus:ring-indigo-500
+                          dark:focus:ring-indigo-600 rounded-md shadow-sm block mt-1 w-full p-1.5 !mb-0"
+                   id="email" type="email" name="email"  required="required" autofocus="autofocus" autocomplete="email"
+                   data-validate='{"required":true, }'>
+        </div>
+
+        <div class="mb-4">
+            <label class="block font-medium text-xl text-gray-700 dark:text-gray-300 !m-0" for="phone_number"> Phone </label>
+            <input class="!border-gray-300 dark:!border-gray-700 dark:!bg-gray-900 dark:text-gray-300 focus:border-indigo-500
+                            dark:focus:border-indigo-600 focus:ring-indigo-500 dark:focus:ring-indigo-600 rounded-md shadow-sm border-gray-300
+                            dark:!border-gray-700 dark:!bg-gray-900 dark:text-gray-300
+                            focus:border-indigo-500 dark:focus:border-indigo-600 focus:ring-indigo-500
+                            dark:focus:ring-indigo-600 rounded-md shadow-sm block mt-1 w-full p-1.5 !mb-0"
+                   id="phone_number" type="tel" name="phone_number" required="required" autofocus="autofocus" autocomplete="phone"
+                   data-validate='{"required":true, "email": true}'>
+        </div>
+        <div class="bg-gray-50 dark:bg-gray-800 dark:text-blue-400 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+            <span class="flex w-full shadow-sm sm:ml-3 sm:w-auto">
+              <button type="submit" class="inline-flex justify-center w-full  border border-transparent px-4 py-2 bg-green-500 hover:bg-green-700 text-xl leading-6 font-bold text-white shadow-sm focus:outline-none focus:border-green-700 focus:shadow-outline-green transition ease-in-out duration-150 "> Save </button>
+            </span>
+            <span class="mt-3 flex w-full shadow-sm sm:mt-0 sm:w-auto">
+              <button type="button" class="inline-flex justify-center w-full  border border-gray-300 px-4 py-2 bg-white text-xl leading-6 font-bold text-gray-700 shadow-sm hover:text-gray-700 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue transition ease-in-out duration-150 "> Cancel </button>
+            </span>
+        </div>
+    </form>
+
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
         <tr>
@@ -57,3 +118,28 @@ $referralCollection = $block->getReferralCollection();
         </tbody>
     </table>
 </div>
+
+<script>
+    require([
+        'jquery'
+    ], function ($) {
+        'use strict';
+
+        $(document).ready(function () {
+            $('#btn-add-referral').on('click', function (event) {
+                event.preventDefault();
+
+                $("#form-referral").removeClass("hidden")
+
+            });
+        });
+    });
+</script>
+
+<script type="text/x-magento-init">
+{
+ "#form-referral": {
+     "validation": {}
+  }
+}
+</script>
